cabal-version:      2.4
name:               cis194-spring13
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis: Exercises from the University of Pennsylvania's CIS 194 course.

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Sam Cooper
maintainer:         66436650+samcooper720x@users.noreply.github.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

executable cis194-spring13
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0
    hs-source-dirs:   app
    default-language: Haskell2010
